		* Add possibility to skip storing the data from columns and matrices in the saved file
	* [analysis]
		* Save and load custom functions for fit, equation curve and function values
	* [worksheet]
		* Inset plot areas - plot areas added as child of another plot area
		* Improve axis ticks locations. The don't need to be always from the bottom to top if it does not look nice (!700)

-----2.12.1 (2025-07) -----
Bug fixes:
	* Fix using default font for axis title
	* Fix build with system QXlsx (!693)
	* Fix build with system QADS 4.4 (!694)
	* Crash on import when no projects opened (BUG 503800)
	* Save rotation of axis title seperately for x and y axis
	* Fix disappearing axis ticks (#1146)
	* Don't crash when creating the data spreadsheet for analysis curves (BUG 504662)
	* Fix crash when aspect is added and all docks in content area are hidden (BUG 504794, 502043)
	* Fix crash when column or row was added to spreadsheet from toolbar and no column or row was selected (BUG 504839)
	* Fix issue when the statistics spreadsheet was not shown if the spreadsheet was a child of workbook
	* Fix issue which caused the context menu of an aspect to not be shown after being reparented
	* Handle Windows logical font "MS Shell Dlg 2"
	* Fix crash when deleting a livedata source with missing source file
	* Parser: Remove not required function and reuse function instead of copying (BUG 506925)
	* Fix the export of spreadsheets to SQLite, wrong format was selected internally in the export dialog
	* Fix the export to SQLite of text values in the spreadsheet containing single quotes
	* Fix FITS import and export issues
	* Don't show any error messages and NaN values in the process behavior chart if no column or an empty column was selected

Improvements:
	* Improve handling of the tab-order to switch between the widgets in the properties explorer
	* Added Shift+Enter shortcut in the properties explorer to recalculate the results of formula and analysis curves
