@@ -24,7 +24,7 @@
        <string>General</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="18" column="0" rowspan="2">
+       <item row="19" column="0" rowspan="2">
         <spacer name="verticalSpacer_4">
          <property name="orientation">
           <enum>Qt::Orientation::Vertical</enum>
@@ -40,14 +40,14 @@
          </property>
         </spacer>
        </item>
-       <item row="14" column="0">
+       <item row="15" column="0">
         <widget class="QLabel" name="lMinLowerLimit">
          <property name="text">
           <string>Min. Lower Limit:</string>
          </property>
         </widget>
        </item>
-       <item row="14" column="2">
+       <item row="15" column="2">
         <widget class="QLineEdit" name="leMinLowerLimit"/>
        </item>
        <item row="0" column="0">
@@ -57,7 +57,7 @@
          </property>
         </widget>
        </item>
-       <item row="11" column="2">
+       <item row="12" column="2">
         <widget class="QSpinBox" name="sbSampleSize">
          <property name="minimum">
           <number>2</number>
@@ -97,11 +97,14 @@
          </property>
         </spacer>
        </item>
-       <item row="21" column="2">
+       <item row="22" column="2">
         <widget class="QComboBox" name="cbPlotRanges"/>
        </item>
        <item row="6" column="2">
         <widget class="QComboBox" name="cbLimitsType"/>
+       </item>
+       <item row="9" column="2">
+        <widget class="QLineEdit" name="leUpperLimitSpecification"/>
        </item>
        <item row="5" column="0">
         <widget class="QLabel" name="lData2Column">
@@ -120,45 +123,48 @@
          </property>
         </widget>
        </item>
-       <item row="21" column="0">
+       <item row="22" column="0">
         <widget class="QLabel" name="lPlotRange">
          <property name="text">
           <string>Plot range:</string>
          </property>
         </widget>
        </item>
-       <item row="13" column="0">
+       <item row="14" column="0">
         <widget class="QLabel" name="lMaxUpperLimit">
          <property name="text">
           <string>Max. Upper Limit:</string>
          </property>
         </widget>
        </item>
-       <item row="24" column="0">
+       <item row="25" column="0">
         <widget class="QCheckBox" name="chkVisible">
          <property name="text">
           <string>Visible</string>
          </property>
         </widget>
        </item>
+       <item row="11" column="2">
+        <widget class="QLineEdit" name="leLowerLimitSpecification"/>
+       </item>
        <item row="3" column="2">
         <widget class="QComboBox" name="cbType"/>
        </item>
-       <item row="23" column="0">
+       <item row="24" column="0">
         <widget class="QCheckBox" name="chkLegendVisible">
          <property name="text">
           <string>Legend</string>
          </property>
         </widget>
        </item>
-       <item row="11" column="0">
+       <item row="12" column="0">
         <widget class="QLabel" name="lSampleSize">
          <property name="text">
           <string>Sample Size:</string>
          </property>
         </widget>
        </item>
-       <item row="22" column="0">
+       <item row="23" column="0">
         <spacer name="verticalSpacerGeneral">
          <property name="orientation">
           <enum>Qt::Orientation::Vertical</enum>
@@ -181,14 +187,21 @@
          </property>
         </widget>
        </item>
-       <item row="16" column="2">
+       <item row="17" column="2">
         <widget class="QCheckBox" name="chbExactLimits">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
-       <item row="12" column="0">
+       <item row="11" column="0">
+        <widget class="QLabel" name="lLowerLimitSpecification">
+         <property name="text">
+          <string>Lower Limit:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="13" column="0">
         <spacer name="verticalSpacer_16">
          <property name="orientation">
           <enum>Qt::Orientation::Vertical</enum>
@@ -244,20 +257,13 @@
          </property>
         </spacer>
        </item>
-       <item row="8" column="0">
-        <widget class="QLabel" name="lCenterSpecification">
-         <property name="text">
-          <string>Center:</string>
-         </property>
-        </widget>
-       </item>
        <item row="7" column="2">
         <widget class="QComboBox" name="cbLimitsMetric"/>
        </item>
-       <item row="13" column="2">
+       <item row="14" column="2">
         <widget class="QLineEdit" name="leMaxUpperLimit"/>
        </item>
-       <item row="16" column="0">
+       <item row="17" column="0">
         <widget class="QLabel" name="lExactLimits">
          <property name="text">
           <string>Exact Limits:</string>
@@ -265,20 +271,14 @@
         </widget>
        </item>
        <item row="10" column="0">
-        <widget class="QLabel" name="lLowerLimitSpecification">
+        <widget class="QLabel" name="lCenterSpecification">
          <property name="text">
-          <string>Lower Limit:</string>
+          <string>Center:</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="2">
-        <widget class="QLineEdit" name="leCenterSpecification"/>
-       </item>
-       <item row="9" column="2">
-        <widget class="QLineEdit" name="leUpperLimitSpecification"/>
-       </item>
        <item row="10" column="2">
-        <widget class="QLineEdit" name="leLowerLimitSpecification"/>
+        <widget class="QLineEdit" name="leCenterSpecification"/>
        </item>
       </layout>
      </widget>
