@@ -9,6 +9,7 @@ New features:
 	* [worksheet]
 		* Inset plot areas - plot areas added as child of another plot area
 		* Improve axis ticks locations. The don't need to be always from the bottom to top if it does not look nice (!700)
+		* Allow to tosition the center and limit lines in the process behavior chart based on the user-defined specifications
 
 -----2.12.1 (2025-07) -----
 Bug fixes:
